--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reseller_mulai_kyc">Mulai verifikasi KYC</string>
+    <string name="register_akun">Belum punya akun?</string>
+    <string name="register_akun_click">Daftar</string>
 </resources>
