--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <string name="rime_syari_channel_id">rime_channel_01</string>
+    <string name="rime_syari_channel_name">RimeChannel01</string>
 </resources>
